welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:56: error: value faireBarre is not a member of Unit
possible cause: maybe a semicolon is missing before `value faireBarre'?
  }faireBarre(Color.GREEN)
   ^